k8slab/20231004/ingress/01-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: ns-tuan
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "7200"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
