k8slab/20231004/ingress/10-nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-sample
  namespace: ns-tuan
  labels:
    name: nginx-ingress-sample
    lab: ingress
spec:
  selector:
    matchLabels:
      name: nginx-ingress-sample
      lab: ingress
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: nginx-ingress-sample
        lab: ingress
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
          volumeMounts:
          - name: config-volume
            mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: nginx-ingress-sample
