k8slab/20231004/ingress/30-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-sample-ing
spec:
  ingressClassName: nginx
  rules:
  - host: "a.ns-tuan.ingress" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress-sample-svc
            port:
              number: 80
